--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Студия функционального тренинга</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="index.css?v0.3">
 </head>
 <body>
 <style>
@@ -86,6 +86,6 @@
 		</section>
 	</main>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-	<script src="index.js"></script>
+	<script src="index.js?v0.3"></script>
 </body>
 </html>
