Поправил тень у фото

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Студия функционального тренинга</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="index.css?v0.3">
+	<link rel="stylesheet" href="index.css?v0.4">
 </head>
 <body>
 <style>
@@ -39,9 +39,9 @@
 		<section class="promo">
 			<div class="promo__image"></div>
 			<div class="promo__shadow"></div>
-			<div class="promo__shadow-top"></div>
-			<div class="promo__shadow-bottom"></div>
-			<div class="promo__shadow-right"></div>
+<!--			<div class="promo__shadow-top"></div>-->
+<!--			<div class="promo__shadow-bottom"></div>-->
+<!--			<div class="promo__shadow-right"></div>-->
 			<div class="motivation">
 				<h2 id="title1" class="motivation__subtitle">Попробуй новое</h2>
 				<h1 id="title2" class="motivation__title">Студия функционального тренинга в Балтийской Жемчужине</h1>
